change: Board -- gap issue solved

--- a/src/app/main-content/board/board.component.scss
+++ b/src/app/main-content/board/board.component.scss
@@ -144,7 +144,7 @@ section{
   .example-list {
     padding: 5px;
     min-height: 60px;
-    max-height: 65vh;
+    height:  calc(100vh - 305px);
     min-width: 290px;
     background: $clrBackground;
     overflow-y: auto;
